[metadata]
name = PyPatchwork
version = 0.0.1
url = https://github.com/tedd-an/PyPatchwork
author = Tedd Ho-Jeong An
author_email = hj.tedd.an@gmail.com
description = A Python library to access the Patchwork REST API.
long_description = file: README.md
license = GPL version 3
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Communications :: Email :: Mailing List Servers

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
install_requires =
    requests >= 2.14.0

